# improvement_loop

./: CHANGELOG.md  README.md  averyloop_config.example.json  project_config.example.yaml  pyproject.toml
averyloop/: __init__.py  evaluator.py  loop_config.py  loop_tracker.py  orchestrator_v2.py  project_config.py
averyloop/agents/: __init__.py  auditor.py  implementer.py  reviewer.py
averyloop/rag/: __init__.py  chunker.py  indexer.py
improvement_loop/: __init__.py  evaluator.py  git_utils.py  orchestrator_v2.py  project_config.py
improvement_loop/agents/: _api.py  implementer.py
improvement_loop/rag/: retriever.py
tests/: test_orchestrator.py
